<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_up_next"
        android:icon="@drawable/ic_b_upnext_image"
        android:title="@string/upnext" />
    <item
        android:id="@+id/bottom_calendar"
        android:icon="@drawable/ic_b_calendar_image"
        android:title="@string/calendar" />
    <item
        android:id="@+id/bottom_funds"
        android:icon="@drawable/ic_b_funds_image"
        android:title="@string/funds" />
    <item
        android:id="@+id/bottom_smox_talk"
        android:icon="@drawable/ic_b_chat_icon"
        android:title="@string/smoxtalk" />
    <item
        android:id="@+id/bottom_smox_profile"
        android:icon="@drawable/ic_b_profile_icon"
        android:title="@string/profile" />

</menu>
