<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/TextColor"
            android:text="@string/type_in_the_reason_you_would_like_to_show_to_the_clients"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtValue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="0.03"
            android:background="@drawable/rect_border"
            android:ems="10"
            android:hint="Title"
            style="@style/TextColor"
            android:padding="@dimen/_7sdp"
            tools:ignore="InefficientWeight" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/rect_yellow_bg"
            android:text="@string/add"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/rect_yellow_bg"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>



</RelativeLayout>