<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditAppointmentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_icon_arrow_back"
            app:title="Edit Appointment" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/plant_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar"
        android:layout_above="@+id/btnNext"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_8sdp">

            <RelativeLayout
                android:id="@+id/rlCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtCustomer"
                    style="@style/TextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer"
                    android:textSize="@dimen/_13ssp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageCircle"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_below="@+id/txtCustomer"
                    app:civ_border_color="#339C27B0"
                    app:civ_border_width="@dimen/_3sdp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtCustomer"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/imageCircle"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:id="@+id/txtContact"
                        style="@style/TextColorGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtName"
                        android:layout_toEndOf="@+id/imageCircle"
                        android:hint="" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>


            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="#DCDCDC" />


            <TextView
                android:id="@+id/txtServiceHeading"
                style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_booked"
                android:textSize="@dimen/_13ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/serviceList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/service_item_row" />
            <TextView
                style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textSize="@dimen/_13ssp" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_2ssp"
                app:cardUseCompatPadding="true">

                <com.github.jhonnyx2012.horizontalpicker.HorizontalPicker
                    android:id="@+id/datePicker"
                    style="@style/BackgroundColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>
            <TextView
                style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time_slots"
                android:textSize="@dimen/_13ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTimeSlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/item_row_time_slots" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/rect_yellow_bg"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:text="@string/update"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent" />

</RelativeLayout>